--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -11,15 +11,20 @@
     <repository>
         <id>java.net</id>
         <name>java.net</name>
-        <url>http://download.java.net/maven/2/</url>
+        <url>http://download.java.net/maven/2</url>
     </repository>
   </repositories>
   <dependencies>
     <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-annotations</artifactId>
-        <version>3.3.1.GA</version>
-    </dependency> 
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-ejb_3.0_spec</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>3.3.1.ga</version>
+    </dependency>
     <dependency>
       <groupId>hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
