--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -13,6 +13,11 @@
         <name>java.net</name>
         <url>http://download.java.net/maven/2</url>
     </repository>
+    <repository>
+      <id>marketcetera</id>
+      <name>marketcetera</name>
+      <url>http://repo.marketcetera.org/maven</url>
+    </repository>
   </repositories>
   <dependencies>
     <dependency>
@@ -28,7 +33,7 @@
     <dependency>
       <groupId>hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <version>1.8.0.7</version>
+      <version>1.8.0.10</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
