--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>sevorg.tic</groupId>
-  <artifactId>webapp</artifactId>
+  <artifactId>tic</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  <name>tic</name>
+  <name>webapp</name>
   <inceptionYear>2008</inceptionYear>
   <properties>
     <scala.version>2.7.1</scala.version>
