--- a/index.yaml
+++ b/index.yaml
@@ -10,20 +10,20 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used 87 times in query history.
+# Unused in query history -- copied from input.
 - kind: Activity
   properties:
   - name: end
   - name: start
     direction: desc
 
-# Used 8 times in query history.
+# Unused in query history -- copied from input.
 - kind: Activity
   properties:
   - name: end
     direction: desc
 
-# Used 112 times in query history.
+# Unused in query history -- copied from input.
 - kind: Activity
   properties:
   - name: stop
@@ -38,7 +38,7 @@ indexes:
   - name: start
     direction: desc
 
-# Used 118 times in query history.
+# Used 6 times in query history.
 - kind: Activity
   properties:
   - name: stop
